--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
-title: Vno Jekyll
-subtitle: A blog-orientation theme for Jekyll
+title: 成熟少男萌的blog
+subtitle: 
 welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
 description: Vno Jekyll is a port of my Ghost theme vno.
 creator: <a href="http://onev.cat">@onevcat</a>
@@ -37,11 +37,11 @@ comment:
     
 # Social
 social:
-    weibo: onevcat
-    github: onevcat
-    twitter: onevcat
+    weibo: 大大萌小小琳
+    github: dadameng
+    twitter: dadameng
     gplus: 107108267983477358170
-    mail: onev@onevcat.com
+    mail: 982541620@qq.com
 
 # Google Analytics
 ga:
